--- a/roles/ansible-cnssc-pipeline-role/tasks/main.yml
+++ b/roles/ansible-cnssc-pipeline-role/tasks/main.yml
@@ -2,3 +2,6 @@
 # tasks file for ansible-cnssc-pipeline-role
 - include: packages.yml
 - include: kind.yml
+- include: kubectl.yml
+- include: tkn.yml
+- include: clonerepos.yml
