Naming change and download fixes

--- a/roles/ansible-cloud-native-ssc/tasks/packages.yml
+++ b/roles/ansible-cloud-native-ssc/tasks/packages.yml
@@ -1,11 +1,12 @@
 - name: update/upgrade all packages
   dnf:
-      name: "*"
+    name: "*"
+    state: latest
 
 - name: install moby-engine
   dnf:
-      name: moby-engine
+    name: moby-engine
 
 - name: install git
   dnf:
-      name: git
+    name: git
