--- a/roles/ansible-cloud-native-ssc/tasks/kind.yml
+++ b/roles/ansible-cloud-native-ssc/tasks/kind.yml
@@ -1,6 +1,7 @@
 - name: Download and install kind
   get_url:
     url: "https://kind.sigs.k8s.io/dl/{{ kind_version }}/kind-linux-amd64"
+    # url: https://github.com/kubernetes-sigs/kind/releases/download/v0.8.1/kind-linux-amd64
     dest: /usr/local/bin/kind
     mode: '0755'
     checksum: "sha256:{{ kind_hash }}"
