--- a/roles/ansible-cloud-native-ssc/vars/main.yml
+++ b/roles/ansible-cloud-native-ssc/vars/main.yml
@@ -2,8 +2,9 @@
 # GOLANG vars
 go_version: 1.14
 GOPATH: /home/vagrant/go
-GOROOT: /usr/local/go
 GO111MODULE: "on"
+golang_shell_profile: /root/.bash_profile
+golang_shell_profile: /home/vagrant/.bash_profile
 
 go_get:
 - name: golint
@@ -17,7 +18,7 @@ kubectl_version: v1.18.3
 kubectl_hash: 6fcf70aae5bc64870c358fac153cdfdc93f55d8bae010741ecce06bb14c083ea
 
 tkn_version: 0.9.0
-tln_hash: b070f458398deb9f81eff93858b61aa0303e9c38972fadc2b3a03ccb7175a267
+tkn_hash: b070f458398deb9f81eff93858b61aa0303e9c38972fadc2b3a03ccb7175a267
 
 # repo data
 in-toto-branch: master
