--- a/roles/ansible-cloud-native-ssc/vars/main.yml
+++ b/roles/ansible-cloud-native-ssc/vars/main.yml
@@ -2,7 +2,7 @@
 # GOLANG vars
 
 golang_version: '1.14.3'
-golang_gopath: 'home/vagrant/go'
+golang_gopath: '$HOME/go'
 
 # Download data
 kind_version: v0.8.1
@@ -21,3 +21,6 @@ secure-supply-chain-branch: master
 # user account
 cnssc_effective_user_id: vagrant
 cnssc_effective_group_id: vagrant
+
+# github account
+github_user_id: lukehinds
