--- a/roles/ansible-cloud-native-ssc/tasks/main.yml
+++ b/roles/ansible-cloud-native-ssc/tasks/main.yml
@@ -5,5 +5,4 @@
 - include: kubectl.yml
 - include: tkn.yml
 - include: misc.yml
-- include: ko.yml
-- include: clonerepos.yml
+# - include: clonerepos.yml
