--- a/playbook.yml
+++ b/playbook.yml
@@ -7,5 +7,5 @@
         policy: targeted
         state: permissive
   roles:
-    - gantsign.golang
+    - fubarhouse.golang
     - ansible-cloud-native-ssc
