--- a/roles/ansible-cloud-native-ssc/vars/main.yml
+++ b/roles/ansible-cloud-native-ssc/vars/main.yml
@@ -12,7 +12,18 @@ go_get:
   url: github.com/google/ko/cmd/ko
   modules: false
 
-# Download data
+# Download in-toto-golang
+go_get:
+- name: in-toto-golang
+  url: github.com/in-toto/in-toto-golang
+  modules: true
+
+# Enviroment variables
+os_environment:
+  - key: KO_DOCKER_REPO
+    value : localhost:5000/mypipeline
+
+# Download hashes
 kind_version: v0.8.1
 kind_hash: 781c3db479b805d161b7c2c7a31896d1a504b583ebfcce8fcd49538c684d96bc
 
@@ -31,4 +42,4 @@ cnssc_effective_user_id: root
 cnssc_effective_group_id: root
 
 # github account
-github_user_id: lukehinds
+github_user_id: someuser
