Updates from local branch (#7)
* Set env vars and deploy in-toto golang

--- a/roles/ansible-cloud-native-ssc/tasks/main.yml
+++ b/roles/ansible-cloud-native-ssc/tasks/main.yml
@@ -4,4 +4,5 @@
 - include: kind.yml
 - include: kubectl.yml
 - include: tkn.yml
-- include: clonerepos.yml
+- include: misc.yml
+# - include: clonerepos.yml
