--- a/roles/ansible-cloud-native-ssc/tasks/packages.yml
+++ b/roles/ansible-cloud-native-ssc/tasks/packages.yml
@@ -10,3 +10,11 @@
 - name: install git
   dnf:
     name: git
+
+- name: install grubby
+  dnf:
+    name: grubby
+
+- name: install jq
+  dnf:
+    name: jq
