--- a/roles/ansible-cloud-native-ssc/tasks/misc.yml
+++ b/roles/ansible-cloud-native-ssc/tasks/misc.yml
@@ -1,6 +1,6 @@
 - name: Create a directory if it does not exist
   file:
-    path: /root/go/src/github.com
+    path: /root/go/src/github.com/tekton
     state: directory
     owner: "{{ cnssc_effective_user_id }}"
     group: "{{ cnssc_effective_group_id }}"
